01 - OpenCRVS Documentation/v1.3/product-specifications/core-functions/3.-validate-event.md
---
title: "3. Validate event"
source_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/3.-validate-event"
markdown_url: "https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/3.-validate-event.md"
version: "v1.3"
retrieved_at: "2026-09-16T15:06:42Z"
content_hash: "sha256:8d0abc4fa76295218268fe484d765de34c713102e8b7a40221bba9dfcc94b51c"
---

> For the complete documentation index, see [llms.txt](https://documentation.opencrvs.org/llms.txt). Markdown versions of documentation pages are available by appending `.md` to page URLs; this page is available as [Markdown](https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/3.-validate-event.md).

# 3. Validate event

In order to register the vital event, the declaration form must be validated by checking all the details recorded and any supporting documents attached.

In OpenCRVS, the declaration form can be reviewed side by side with the supporting documents to ensure that it is accurate before the vital event is registered. If the information is correct, the Registrar can go on to register the vital event; if it is not correct, it can be sent for updates.

In the case where a Registrar has an assistant to conduct initial checks, the Registration Agent can review a declaration and subsequently send it for approval to the Registrar.

### **Pre-condition**

A record is in the Ready for Review workqueue with the status ‘In Review’

### **Triggers**

A Registration Agent or Registrar assigns and downloads the declaration

### **Standard flow**

1. Registration Agent or Registrar navigates to Ready for Review workqueue
2. User assigns themselves to the record
3. Declaration is downloaded and is now available to be validated offline
4. User clicks “Review”
5. User validates declaration against supporting documents
6. Depending on who is validating the record there are different actions on the review page:
   1. If Registrar then they can Register the declaration
   2. If Registration Agent they can then send the declaration for approval
7. User is prompted to confirm their action
8. On confirming, declaration is sent to the Outbox for processing
9. Once processed the declaration status is updated to ‘Validated’

### **Post conditions**

* Declaration is sent to the appropriate users workqueue
  1. If Sent for approval → Goes to the Registrar’s Ready to review workqueue, and the Registration Agents Sent for Approval workqueue
  2. IF Registrar → Goes to the Ready to Print workqueue
* Record audit is updated to show that the record has been ‘Validated’

### **Variations/Exceptions**

* If updates are required and the user is unable to make them at this time. The can choose to send the declaration to the Requires Updates workqueue. Informant receives sms notification that their declaration was rejected and recommend them to visit the office.
* The validator can choose to change a part of the declaration. If so they will receive a warning prompt about making changes. Before navigating them to the required section of the form. A audit log of this change is recorded in Record Audit.

{% embed url="<https://www.loom.com/share/8a65657f324c4d028c4ed975711706c9?sid=00735b1b-c2ff-4432-8126-a88bbd02439b>" %}


---

# Agent Instructions
This documentation is published with GitBook. GitBook is the documentation platform designed so that both humans and AI agents can read, navigate, and reason over technical content effectively. Learn more at gitbook.com.

## Querying This Documentation
If you need additional information that is not directly available in this page, you can query the documentation dynamically by asking a question.

Perform an HTTP GET request on the current page URL with the `ask` query parameter, and the optional `goal` query parameter:

```
GET https://documentation.opencrvs.org/v1.3/product-specifications/core-functions/3.-validate-event.md?ask=<question>&goal=<endgoal>
```

`ask` is the immediate question: it should be specific, self-contained, and written in natural language.
`goal` is optional and describes the broader end goal you are ultimately trying to accomplish on behalf of the user. GitBook uses it to tailor the answer towards what is most useful for that goal.

The response will contain a direct answer to the question and relevant excerpts and sources from the documentation.

Use this mechanism when the answer is not explicitly present in the current page, you need clarification or additional context, or you want to retrieve related documentation sections.
